s09 spec: add PageMemory v2 execution spec (Phase 3 finale)
Phase 3 收官 v2 执行规格:全局 Treiber free-list(侵入式 next + ABA 计数器)
+ 多段惰性增长(SEG_CNT=16 / IDX_BITS=28)+ 条带 OffheapReadWriteLock
(8B 锁字 + tag 防陈旧 + upgrade)+ DataRegion 容器 + DirectMemoryProvider。

现实校准:DataRegion 是 ~85 行 POJO 容器(非连续 slab,堆外在 Segment[]);
契约稳定性 = 不改 S8 PageMemory 接口,只升级 PageMemoryNoStoreImpl 实现
+ 新暴露 DataRegion(下游 S13/S16/S15 透明升级)。

cited-paths 10/10;roadmap S9 块挂执行规格链接。

Co-Authored-By: Claude <noreply@anthropic.com>