@@ -5,8 +5,8 @@
 > 图例:☐ 未开始 · ◐ 进行中 · ☑ 完成
 
 ## 当前位置
-- **最近完成**:**S08 代码 + 讲义** —— `ignite-gogogo/s08-page-memory/`(`mvn test` **10 passed**):`PageIdUtils` 位运算 + `FullPageId` rotation-blind + `PageMemory` 裸 long 契约 + `OffHeap`(包 `sun.misc.Unsafe`,反射 `DirectByteBuffer` 构造器 wrapPointer) + `PageMemoryNoStoreImpl` 单段 24B 头 + 粗锁占位。讲义 `docs-learn/S08-page-memory-v1.md`。踩坑:JDK21 的 `DirectByteBuffer` 只有 `private (long,long)` 构造器(无 `(long,int)`),需 `buf.getClass()` try 两签名 + surefire `--add-opens java.base/java.nio`。上一步:S08 执行规格(7/7 cited)。
-- **下一步**:**Phase 3 → S9** —— `/ignite-session-doc 09`(`PageMemory` v2:全局 Treiber free-list[侵入式 next + ABA 计数器] + 多段惰性增长 + `DataRegion` 容器 + 条带 `OffheapReadWriteLock`[页内 8B 锁字 + tag 防陈旧])→ `/ignite-session-code 09`。**完全隔离,无需集群;M1 要到 S15。**
+- **最近完成**:**S09 执行规格** —— `specs/sessions/S09-data-region-freelist.md`(Phase 3 收官 · v2:全局 Treiber free-list[侵入式 next + ABA 计数器] + 多段惰性增长[SEG_CNT=16/IDX_BITS=28] + 条带 `OffheapReadWriteLock`[8B 锁字 + tag 防陈旧 + upgrade] + `DataRegion` 容器 + `DirectMemoryProvider`);现实校准 DataRegion 是 ~85 行 POJO 容器(非连续 slab,堆外在 `Segment[]`);契约稳定性 = **不改 S8 `PageMemory` 接口**,只升级 `PageMemoryNoStoreImpl` 实现 + 新暴露 `DataRegion`;`check-cited-paths` **10/10 OK**。上一步:S08 代码(`s08-page-memory/`,10 passed)。
+- **下一步**:**Phase 3 收官** —— `/ignite-session-code 09`(建 `s09-data-region/`:从 s08 复制扩展,重写 `PageMemoryNoStoreImpl` v2[free-list + 多段 + 锁] + `OffheapReadWriteLock` + `DataRegion` + provider,跑绿 §5 具名测试 + 讲义)→ **Phase 3 完成**,转 Phase 4(WAL,S10/S11)。**完全隔离,无需集群;M1 要到 S15。**
 - **试点**:Phase 1(NIO)流水线验证中;Phase 0(S1~S2)试点期间暂越过(真做课程时 Phase 0 先行)。
 
 ## 基础设施(已建立)
@@ -48,7 +48,7 @@
 | **S6** | **Direct 编解码 v1** | ☑ `S06-direct-codec.md` | ☑ `s06-direct-codec/` | ☑ 25 passed | ☑ | ☑ |
 | **S7** | **Marshaller v2** | ☑ `S07-marshaller.md` | ☑ `s07-marshaller/` | ☑ 31 passed | ☑ | ☑ |
 | **S8** | **页内存 v1** | ☑ `S08-page-memory-v1.md` | ☑ `s08-page-memory/` | ☑ 10 passed | ☑ | ☑ |
-| S9 | DataRegion + free list | ☐ | ☐ | ☐ | ☐ | ☐ |
+| S9 | DataRegion + free list | ☑ `S09-data-region-freelist.md` | ☐ | ☐ | ☐ | ◐ |
 | S10 | WAL v1 | ☐ | ☐ | ☐ | ☐ | ☐ |
 | S11 | WAL 回放 | ☐ | ☐ | ☐ | ☐ | ☐ |
 | S12 | 内存 B+树 | ☐ | ☐ | ☐ | ☐ | ☐ |
